- Added example with BashOperator and dbt profile for this DAG. - Updated in README.md - Changed database for dbt models

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ AIRFLOW__CORE__MAX_ACTIVE_TASKS_PER_DAG=128
 AIRFLOW__CORE__MAX_TEMPLATED_FIELD_LENGTH=16384
 
 # Ariflow Connections
-AIRFLOW_CONN_AIRFLOW_DB='postgresql://airflow:airflow@postgres:5432/airflow'
+AIRFLOW_CONN_AIRFLOW_DB='postgresql://airflow:airflow@postgres:5432/postgres'
 
 # Backend DB
 AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres/airflow
